Fixed overflow-wrap shrinking content

--- a/static/main.css
+++ b/static/main.css
@@ -27,6 +27,7 @@ hr {
     background-color: #EEEEEE;
     display: flex;
     flex-direction: column;
+    flex-shrink: 0;
     overflow: auto;
     padding: 0 4rem;
 }
